# news-briefing-generator

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  crontab  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  schema.sql  sources.yaml
.claude/: settings.json
.claude/hooks/: guard-bash.sh  guard-files.sh
briefings/: 2026-06-07-morning.json  2026-06-08-test-morning.json  2026-06-15-evening.json  2026-06-16-evening.json  2026-06-16-morning.json  2026-06-17-evening.json  2026-06-17-morning.json  2026-06-18-morning.json  index.json
config/: briefing_categories.yaml  sources.yaml
deploy/: README.md  crontab.host
deploy/env/: dev.env.example  prod.env.example
feeds/: 50x.html
implementation-plans/: implementation-plan-base-2026-04-03.md
jina_clone/: __main__.py  cli.py  config.py
scripts/: deploy.sh  healthcheck.sh
tests/: conftest.py  test_briefing_cli_backend.py  test_briefing_config.py  test_briefing_db.py  test_briefing_feed.py  test_briefing_generator.py  test_briefing_llm.py  test_briefing_markdown.py  test_briefing_notify.py  test_briefing_printer.py  test_briefing_renderer.py  test_briefing_schema.py  test_briefing_slack.py  test_briefing_web.py  test_cli_briefing.py  test_config.py  test_extractor.py  test_feed_page.py  test_jobs_briefing.py  test_jobs_fetch.py  test_jobs_slack_digest.py  test_jobs_summarize.py  test_live_data.py  test_prompt.py  test_providers.py  test_sources_rss.py  test_sources_scrape.py  test_storage.py
web/: app.js  editions  index.html  style.css
(+71 files in other folders)
